feat: implement @repo/api-client and update API swagger entities
